# E1-BUOY-CONTROL

./: pyproject.toml
docs/: PowerAndDataMap.txt  Technical-Design-Document.md
payloadControl/: payloadInterface.py
payloadControl/components/PAR/: LogPAR.py  logger.py
payloadControl/components/PAR/PAR-LOG-FW-V1.0/: PAR-LOG-FW-V1.0.ino  par_class.cpp  par_class.h
powerControl/: logger.py  powerInterface.py  toggleMesh.py
systemControl/: coreMonitor.py
